# dw-ssfp-fit

./: CMakeLists.txt  dw-ssfp-fit.def  fit-job-array  fit.py  helpers.py  merge  preprocess.py
src/: Acquisition.cpp  Acquisition.h  Problem.cpp  Problem.h  TimeIntervals.cpp  TimeIntervals.h  __init__.py  benchmark.cpp  benchmark.h  diffusion_tensor.cpp  diffusion_tensor.h  diffusion_vectors.py  dispatch.cpp  dispatch.h  dw_ssfp_fit.cpp  fit.cpp  fit.h  models.cpp  models.h  protocol.py
